--- a/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud-eureka-server7002/src/main/resources/application.yml
@@ -14,3 +14,7 @@ eureka:
        # 单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
         #集群 相互注册
       defaultZone: http://eureka7001.com:7001/eureka/
+  server:
+  #关闭自我保护机制，保证不可用服务被及时剔除
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 2000
