--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -4,15 +4,21 @@ server:
 spring:
   application:
     name: cloud-order-service
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1
 
 eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-       #单机版 defaultZone: http://localhost:7001/eureka
+       #单机版
+       defaultZone: http://localhost:7001/eureka
        #集群版
-       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+       #defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
   instance:
      instance-id: order80
      prefer-ip-address: true #访问路径可以显示IP地址
