--- a/cloud-config-center-3344/pom.xml
+++ b/cloud-config-center-3344/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>cloud-config-center-3344</artifactId>
     <dependencies>
-        <!--config server-->
+        <!--com.atguigu.springcloud.alibaba.config server-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
