--- a/cloud-config-center-3344/src/main/resources/application.yml
+++ b/cloud-config-center-3344/src/main/resources/application.yml
@@ -3,17 +3,17 @@ server:
 
 spring:
   application:
-    name: cloud-config-center
+    name: cloud-com.atguigu.springcloud.alibaba.config-center
   cloud:
-    config:
+    com.atguigu.springcloud.alibaba.config:
       server:
         git:
           skipSslValidation: true  #https协议要开启跳过验证
-          #uri: git@github.com:EiletXie/config-repo.git #Github上的git仓库名字
-          uri: https://github.com/xmrxy/springcloud-config.git #Github上的git仓库名字
+          #uri: git@github.com:EiletXie/com.atguigu.springcloud.alibaba.config-repo.git #Github上的git仓库名字
+          uri: https://github.com/xmrxy/springcloud-com.atguigu.springcloud.alibaba.config.git #Github上的git仓库名字
           ##搜索目录.这个目录指的是github上的目录
           search-paths:
-            - springcloud-config
+            - springcloud-com.atguigu.springcloud.alibaba.config
           username: xmrxy@sina.com
           password: Wgy511300
       ##读取分支
@@ -21,5 +21,5 @@ spring:
 
 eureka:
   client:
-    service-url:
+    com.atguigu.springcloud.alibaba.service-url:
       defaultZone: http://eureka7001.com:7001/eureka/
