--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: cloud-order-service
+    name: cloud-order-com.atguigu.springcloud.alibaba.service
   zipkin:
     base-url: http://localhost:9411
   sleuth:
@@ -14,7 +14,7 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
-    service-url:
+    com.atguigu.springcloud.alibaba.service-url:
        #单机版
        defaultZone: http://localhost:7001/eureka
        #集群版
