--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -13,13 +13,13 @@ spring:
         - id: payment_route # 路由的id,没有规定规则但要求唯一,建议配合服务名
           #匹配后提供服务的路由地址
           #uri: http://localhost:8001
-          uri: lb://cloud-payment-service
+          uri: lb://cloud-payment-com.atguigu.springcloud.alibaba.service
           predicates:
             - Path=/payment/get/** # 断言，路径相匹配的进行路由
 
         - id: payment_route2
           #uri: http://localhost:8001
-          uri: lb://cloud-payment-service
+          uri: lb://cloud-payment-com.atguigu.springcloud.alibaba.service
           predicates:
           - Path=/payment/lb/** #断言,路径相匹配的进行路由
           #- After=2020-06-07T18:09:06.656+08:00[Asia/Shanghai]
@@ -28,9 +28,9 @@ spring:
 
 eureka:
   instance:
-    hostname: cloud-gateway-service
+    hostname: cloud-gateway-com.atguigu.springcloud.alibaba.service
   client:
     fetch-registry: true
     register-with-eureka: true
-    service-url:
+    com.atguigu.springcloud.alibaba.service-url:
       defaultZone: http://eureka7001.com:7001/eureka/
