--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: cloud-payment-service
+    name: cloud-payment-com.atguigu.springcloud.alibaba.service
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
        # mysql驱动类
@@ -21,7 +21,7 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
-    service-url:
+    com.atguigu.springcloud.alibaba.service-url:
       #单机版
       defaultZone: http://localhost:7001/eureka
       #集群版
